@@ -1,3 +1,4 @@
+Added ability to limit simulation time on animations
 Added "Rewind" button to the plate motion tab
 Increased the "texture" contrast
 Added approximate continental collision model, crust/terrain changes to accommodate.
